--- a/rhel_ec2/clean/etc/mcollective/server.cfg
+++ b/rhel_ec2/clean/etc/mcollective/server.cfg
@@ -1,20 +1,23 @@
-# Basic stuff
 topicprefix = /topic/
-libdir      = /usr/share/mcollective/plugins
-logfile     = /var/log/mcollective.log
-loglevel    = log
-daemonize   = 1
+main_collective = mcollective
+collectives = mcollective
+libdir = /usr/libexec/mcollective
+logfile = /var/log/mcollective.log
+loglevel = debug
+daemonize = 1
 
 # Plugins
 securityprovider = psk
-plugin.psk       = unset
+plugin.psk = unset
 
-# Middleware
 connector = stomp
-plugin.stomp.port     = 6163
-plugin.stomp.user     = mcollective
+plugin.stomp.port = 6163
+plugin.stomp.user = mcollective
 plugin.stomp.password = marionette
 
 # Facts
-factsource = pbuilder
+factsource =  pbuilder
+
+
+
 
