--- a/mcollective_additions/server.cfg
+++ b/mcollective_additions/server.cfg
@@ -3,7 +3,7 @@ main_collective = mcollective
 collectives = mcollective
 libdir = /usr/share/mcollective/plugins
 logfile = /var/log/mcollective.log
-loglevel = info
+loglevel = debug
 daemonize = 1
 
 # Plugins
@@ -11,7 +11,6 @@ securityprovider = psk
 plugin.psk = unset
 
 connector = stomp
-plugin.stomp.host = ec2-184-73-175-145.compute-1.amazonaws.com
 plugin.stomp.port = 6163
 plugin.stomp.user = mcollective
 plugin.stomp.password = marionette
