Updated to ActiveMQ configuration

--- a/mcollective_additions/server.cfg
+++ b/mcollective_additions/server.cfg
@@ -10,10 +10,15 @@ daemonize = 1
 securityprovider = psk
 plugin.psk = unset
 
-connector = stomp
-plugin.stomp.port = 6163
-plugin.stomp.user = mcollective
-plugin.stomp.password = marionette
+# Middleware
+connector = activemq
+plugin.activemq.pool.size = 1
+plugin.activemq.pool.1.port = 6164
+plugin.activemq.pool.1.user     = mcollective
+plugin.activemq.pool.1.password = marionette
+plugin.activemq.pool.1.port = 6164
+plugin.activemq.pool.1.ssl = true
+plugin.activemq.pool.1.ssl.fallback = true
 
 # Facts
 factsource =  pbuilder
