--- a/mcollective_additions/server.cfg
+++ b/mcollective_additions/server.cfg
@@ -10,17 +10,10 @@ daemonize = 1
 securityprovider = psk
 plugin.psk = unset
 
-# Middleware
-connector = activemq
-plugin.activemq.pool.size = 1
-plugin.activemq.pool.1.port = 6164
-plugin.activemq.pool.1.user     = mcollective
-plugin.activemq.pool.1.password = marionette
-plugin.activemq.pool.1.port = 6164
-plugin.activemq.pool.1.ssl = true
-plugin.activemq.pool.1.ssl.fallback = true
+connector = stomp
+plugin.stomp.port = 6163
+plugin.stomp.user = mcollective
+plugin.stomp.password = marionette
 
 # Facts
 factsource =  pbuilder
-
-
