update for mcollective ssh security plugin

--- a/mcollective_additions/server.cfg
+++ b/mcollective_additions/server.cfg
@@ -7,8 +7,10 @@ loglevel = debug
 daemonize = 1
 
 # Plugins
-securityprovider = psk
-plugin.psk = unset
+securityprovider = sshkey
+plugin.sshkey.server.send_key = /etc/mcollective/ssh/mcollective.pub
+plugin.sshkey.server.private_key = /etc/mcollective/ssh/mcollective
+plugin.sshkey.server.authorized_keys = /etc/mcollective/ssh/authorized_keys
 
 # Middleware
 connector = activemq
