--- a/mcollective_additions/server.cfg
+++ b/mcollective_additions/server.cfg
@@ -4,6 +4,7 @@ collectives = mcollective
 libdir = /usr/share/mcollective/plugins
 logfile = /var/log/mcollective.log
 loglevel = debug
+max_log_size = 2097152
 daemonize = 1
 
 # Plugins
