DTK-1724: Add emacs, vim and rdebug

--- a/lib/config/install.config
+++ b/lib/config/install.config
@@ -11,7 +11,7 @@
 	:puppet_omnibus_deb64      => 'http://dtk-storage.s3.amazonaws.com/puppet-omnibus_2.7.23-fpm0_amd64.deb',
 	:puppet_omnibus_rpm64      => 'http://dtk-storage.s3.amazonaws.com/puppet-omnibus-2.7.23.fpm0-1.x86_64.rpm',
   :upgrades => {
-    :redhat => ['openssl', 'bash'],
-    :debian => ['openssl', 'bash']
+    :redhat => ['openssl', 'bash', 'emacs-nox', 'vim-enhanced'],
+    :debian => ['openssl', 'bash', 'emacs23-nox', 'vim']
   }
 }
