Install logstash-forwarder on AMIs

--- a/lib/config/install.config
+++ b/lib/config/install.config
@@ -10,6 +10,8 @@
 	:rpm_forge_el6_i686_repo   => 'http://apt.sw.be/redhat/el6/en/i386/rpmforge/RPMS/rpmforge-release-0.5.3-1.el6.rf.i686.rpm',
 	:puppet_omnibus_deb64      => 'http://dtk-storage.s3.amazonaws.com/puppet-omnibus_2.7.23-fpm0_amd64.deb',
 	:puppet_omnibus_rpm64      => 'http://dtk-storage.s3.amazonaws.com/puppet-omnibus-2.7.23.fpm0-1.x86_64.rpm',
+  :logstash_forwarder_rpm64  => 'http://dtk-storage.s3.amazonaws.com/logstash-forwarder-0.3.1-1.x86_64.rpm',
+  :logstash_forwarder_deb64  => 'http://dtk-storage.s3.amazonaws.com/logstash-forwarder_0.3.1_amd64.deb',
   :upgrades => {
     :redhat => ['openssl', 'bash', 'emacs-nox', 'vim-enhanced'],
     :debian => ['openssl', 'bash', 'emacs23-nox', 'vim']
