--- a/lib/config/install.config
+++ b/lib/config/install.config
@@ -13,7 +13,7 @@
   :logstash_forwarder_rpm64  => 'http://dtk-storage.s3.amazonaws.com/logstash-forwarder-0.3.1-1.x86_64.rpm',
   :logstash_forwarder_deb64  => 'http://dtk-storage.s3.amazonaws.com/logstash-forwarder_0.3.1_amd64.deb',
   :upgrades => {
-    :redhat => ['openssl', 'bash', 'emacs-nox', 'vim-enhanced'],
-    :debian => ['openssl', 'bash', 'emacs23-nox', 'vim']
+    :redhat => ['openssl', 'bash', 'emacs-nox', 'vim-enhanced', 'monit'],
+    :debian => ['openssl', 'bash', 'emacs23-nox', 'vim', 'monit']
   }
 }
